@@ -1,6 +1,6 @@
 package utn.tacs.grupo3.telegram.bot.handler.command;
 
-import java.io.Serializable;
+import java.util.Arrays;
 import java.util.List;
 
 import org.telegram.telegrambots.meta.api.methods.BotApiMethod;
@@ -13,29 +13,26 @@ import utn.tacs.grupo3.telegram.bot.constants.PlacesBotConstants;
 import utn.tacs.grupo3.telegram.bot.factory.InlineKeyboardFactory;
 import utn.tacs.grupo3.telegram.bot.factory.MessageFactory;
 import utn.tacs.grupo3.telegram.bot.handler.AbstractCommandHandler;
-import utn.tacs.grupo3.telegram.bot.user.LoginStatusChecker;
 
+/**
+ * Handler for /search command
+ */
 public class SearchCommandHandler extends AbstractCommandHandler{
 
-	public SearchCommandHandler(LoginStatusChecker loginStatusChecker) {
-		super(loginStatusChecker);
-	}
-
 	@Override
-	public <T extends Serializable> List<BotApiMethod<?>> handleCommand(Message message) {
-		loginStatusChecker.checkUserLoginStatus(message.getFrom());
+	public List<BotApiMethod<?>> handle(Message message) {
 		
 		InlineKeyboardMarkup keyboard = InlineKeyboardFactory.createInlineKeyboard(				
-				List.of(
+				Arrays.asList(
 					new InlineKeyboardButton("By name").setSwitchInlineQueryCurrentChat(PlacesBotConstants.SEARCH_BY_NAME),
 					new InlineKeyboardButton("Near me").setSwitchInlineQueryCurrentChat(PlacesBotConstants.SEARCH_NEAR_ME_INLINE)
 				));
 		
 		SendMessage answer = MessageFactory.createSendMessage(message)
-				.setText("Search places")
+				.setText("Search places. Turn on location services")
 				.setReplyMarkup(keyboard);		
 		
-		return List.of(answer);
+		return Arrays.asList(answer);
 	}
 
 }
